# data-platform

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.devcontainer/: devcontainer.json  setup.sh
backend/: .gitignore  alembic.ini  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_core_model.py  0003_ingest_extract.py  0004_ingest_runs.py  0005_ingest_jobs.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  compat.py
backend/app/api/v1/: __init__.py  ai.py  datasets.py  datasources.py  ingest_tasks.py  jobs.py  operators.py  quality.py  uploads.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/data/: operators_catalog.json
backend/app/models/: __init__.py  dataset.py  dataset_version.py  datasource.py  ingest_run.py  ingest_task.py  job.py  job_input.py  upload.py
backend/app/schemas/: __init__.py  ai.py  common.py  dataset.py  datasource.py  ingest_task.py  job.py  upload.py
backend/app/services/: __init__.py  engine.py  ingest_runner.py  landing.py  operator_catalog.py  quality.py
backend/app/services/ai/: __init__.py  base.py  heuristic.py  llm.py
backend/scripts/: build_operator_catalog.py  operator_marketplace_meta.json
backend/tests/: conftest.py  test_ai_api.py  test_compat_auth.py  test_datasources.py  test_ingest_tasks.py  test_quality_api.py  test_uploads.py
backend/tests/unit/: conftest.py  test_ai_heuristic.py
dashboard/: index.html  knowledge-graph.json  meta.json
docs/: README.md
frontend/: .gitignore  package-lock.json  (+1 more)
(+90 files in other folders)
