[project]
name = "adp-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.31",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
